/*
 * $Id$
 */

2010-10-05 15:19 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/wxbase/html/wx_HtmlWindow.cpp
     ! Fixed virtual function OnOpeningURL to get by reference the "redirect" value

2010-10-05 10:46 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/wxbase/wx_HtmlWindow.h
     * added virtual function OnSetTitle()

  *  include/wxHarbour/wxharbour.ch
  *  src/common/wxhfuncs.prg
     * added command for wxHtmlWindow: @ HTMLWINDOW ...

  *  src/wxbase/html/wx_HtmlWindow.cpp
  *  src/wxbase/html/wxhHtmlWindow.prg
     * added more method's

2010-10-01 15:10 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  GNUmakefile
  *  makefile.bcc
  *  makefile.gcc
  *  makefile.vc
  +  include/wxHarbour/wxbase/wx_HtmlWindow.h
  +  include/wxHarbour/wxbase/wx_ScrolledWindow.h
  +  src/wxbase/baseclasses/wx_ScrolledWindow.cpp
  +  src/wxbase/baseclasses/wxhScrolledWindow.prg
  +  src/wxbase/html/wx_HtmlWindow.cpp
  +  src/wxbase/html/wxhHtmlWindow.prg
     + added sources for classes: wxScrolledWindow, wxHtmlWindow

  *  include/wxHarbour/property.ch
     + added command for declaring singleton classes

  *  src/wxbase/advctrls/wxhGrid.prg
     * removed declaration for wxScrolledWindow class

  *  src/wxbase/events/wx_SizeEvent.cpp
     ! Fixed wrong definition of GetSize

2010-09-27 15:17 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  samples/arrbrowser/arrbrowser.prg
     * added debug conditionals helpers

  *  src/hrbcompat/tbrowse/wxhBrowse.prg
     % adding column zero on array/hash datasource's
     ! Removed wrong conditional

2010-09-27 14:45 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/raddox/TField.prg
     * ::GetIsPrimaryKeyField is using now ::FTable:KeyField for comparing
     * deprecated Table:GetBaseKeyField in favor of Table:KeyField

  *  src/raddox/TIndex.prg
     * setting the primary index on last current "PRIMARY" index processed