@@ -2,6 +2,17 @@
  * $Id$
  */
 
+2010-10-05 17:49 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
+  *  GNUmakefile
+  *  makefile.bcc
+  *  makefile.gcc
+  *  makefile.vc
+  +  src/wxbase/system/wx_Env.cpp
+     * added source with environment functions:
+       + wxGetEnv
+       + wxSetEnv
+       + wxUnsetEnv
+
 2010-10-05 15:19 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
   *  src/wxbase/html/wx_HtmlWindow.cpp
      ! Fixed virtual function OnOpeningURL to get by reference the "redirect" value
